- Made table bar position fixed + adapted margins - Target table bar as child of the li element now instead of being a sibling, which would make the navlist dirty - Increased checkbox z-index -> now the icon catched checked events as well - Scoped input padding to 'form input' to exclude navbar buttons - Prevent '.preview-section-holder' vertical item centering

--- a/containers/preview-list.scss
+++ b/containers/preview-list.scss
@@ -14,7 +14,7 @@ $preview-item-link-color: #009586 !default;
     //margin-left: auto;
     //margin-right: auto;;
     display: grid;
-    @include shared.center-content();
+    //@include shared.center-content();
 
     padding: {
         left: 10%;
