--- a/controls/forms.scss
+++ b/controls/forms.scss
@@ -28,7 +28,7 @@ $search-box-color-pair: rgba(#22cc99, 0.8) white !default;
 
 
 
-input {
+form input {
     all: unset;
     //font-size: 1.2rem;
     font-size: 1.4rem;
